🤖 fix format and test

--- a/src/lib/i18n/locales/bg-BG/translation.json
+++ b/src/lib/i18n/locales/bg-BG/translation.json
@@ -72,6 +72,8 @@
 	"available!": "наличен!",
 	"Back": "Назад",
 	"Bad Response": "Невалиден отговор от API",
+	"Bad words File": "",
+	"Bad words Template": "",
 	"Banners": "Банери",
 	"Base Model (From)": "Базов модел (от)",
 	"Batch Size (num_batch)": "",
@@ -211,6 +213,8 @@
 	"Embedding model set to \"{{embedding_model}}\"": "Модел за вграждане е настроен на \"{{embedding_model}}\"",
 	"Enable Chat History": "Вклюване на Чат История",
 	"Enable Community Sharing": "Разрешаване на споделяне в общност",
+	"Enable message bad Words replacement": "",
+	"Enable Message Filter": "",
 	"Enable New Sign Ups": "Вклюване на Нови Потребители",
 	"Enable Web Search": "Разрешаване на търсене в уеб",
 	"Engine": "",
@@ -264,6 +268,7 @@
 	"File": "",
 	"File Mode": "Файл Мод",
 	"File not found.": "Файл не е намерен.",
+	"Filter": "",
 	"Filter is now globally disabled": "",
 	"Filter is now globally enabled": "",
 	"Filters": "",
@@ -350,6 +355,7 @@
 	"Memory cleared successfully": "",
 	"Memory deleted successfully": "",
 	"Memory updated successfully": "",
+	"Message Filter Settings": "",
 	"Messages you send after creating your link won't be shared. Users with the URL will be able to view the shared chat.": "Съобщенията, които изпращате след създаването на връзката, няма да бъдат споделяни. Потребителите с URL адреса ще могат да видят споделения чат.",
 	"Minimum Score": "Минимална оценка",
 	"Mirostat": "Mirostat",
