--- a/src/lib/i18n/locales/ca-ES/translation.json
+++ b/src/lib/i18n/locales/ca-ES/translation.json
@@ -72,6 +72,8 @@
 	"available!": "disponible!",
 	"Back": "Enrere",
 	"Bad Response": "Resposta errònia",
+	"Bad words File": "",
+	"Bad words Template": "",
 	"Banners": "Banners",
 	"Base Model (From)": "Model base (des de)",
 	"Batch Size (num_batch)": "Mida del lot (num_batch)",
@@ -211,6 +213,8 @@
 	"Embedding model set to \"{{embedding_model}}\"": "Model d'incrustació configurat a \"{{embedding_model}}\"",
 	"Enable Chat History": "Activar l'historial de xats",
 	"Enable Community Sharing": "Activar l'ús compartit amb la comunitat",
+	"Enable message bad Words replacement": "",
+	"Enable Message Filter": "",
 	"Enable New Sign Ups": "Permetre nous registres",
 	"Enable Web Search": "Activar la cerca web",
 	"Engine": "",
@@ -264,6 +268,7 @@
 	"File": "Arxiu",
 	"File Mode": "Mode d'arxiu",
 	"File not found.": "No s'ha trobat l'arxiu.",
+	"Filter": "",
 	"Filter is now globally disabled": "El filtre ha estat desactivat globalment",
 	"Filter is now globally enabled": "El filtre ha estat activat globalment",
 	"Filters": "Filtres",
@@ -350,6 +355,7 @@
 	"Memory cleared successfully": "Memòria eliminada correctament",
 	"Memory deleted successfully": "Memòria eliminada correctament",
 	"Memory updated successfully": "Memòria actualitzada correctament",
+	"Message Filter Settings": "",
 	"Messages you send after creating your link won't be shared. Users with the URL will be able to view the shared chat.": "Els missatges enviats després de crear el teu enllaç no es compartiran. Els usuaris amb l'URL podran veure el xat compartit.",
 	"Minimum Score": "Puntuació mínima",
 	"Mirostat": "Mirostat",
