--- a/src/lib/i18n/locales/de-DE/translation.json
+++ b/src/lib/i18n/locales/de-DE/translation.json
@@ -72,6 +72,8 @@
 	"available!": "Verfügbar!",
 	"Back": "Zurück",
 	"Bad Response": "Schlechte Antwort",
+	"Bad words File": "",
+	"Bad words Template": "",
 	"Banners": "Banner",
 	"Base Model (From)": "Basismodell (From)",
 	"Batch Size (num_batch)": "Stapelgröße (num_batch)",
@@ -211,6 +213,8 @@
 	"Embedding model set to \"{{embedding_model}}\"": "Embedding-Modell auf \"{{embedding_model}}\" gesetzt",
 	"Enable Chat History": "Unterhaltungshistorie aktivieren",
 	"Enable Community Sharing": "Community-Freigabe aktivieren",
+	"Enable message bad Words replacement": "",
+	"Enable Message Filter": "",
 	"Enable New Sign Ups": "Registrierung erlauben",
 	"Enable Web Search": "Websuche aktivieren",
 	"Engine": "Engine",
@@ -264,6 +268,7 @@
 	"File": "Datei",
 	"File Mode": "Datei-Modus",
 	"File not found.": "Datei nicht gefunden.",
+	"Filter": "",
 	"Filter is now globally disabled": "Filter ist jetzt global deaktiviert",
 	"Filter is now globally enabled": "Filter ist jetzt global aktiviert",
 	"Filters": "Filter",
@@ -350,6 +355,7 @@
 	"Memory cleared successfully": "Erinnerung erfolgreich gelöscht",
 	"Memory deleted successfully": "Erinnerung erfolgreich gelöscht",
 	"Memory updated successfully": "Erinnerung erfolgreich aktualisiert",
+	"Message Filter Settings": "",
 	"Messages you send after creating your link won't be shared. Users with the URL will be able to view the shared chat.": "Nachrichten, die Sie nach der Erstellung Ihres Links senden, werden nicht geteilt. Nutzer mit der URL können die freigegebene Unterhaltung einsehen.",
 	"Minimum Score": "Mindestpunktzahl",
 	"Mirostat": "Mirostat",
