--- a/src/lib/i18n/locales/fa-IR/translation.json
+++ b/src/lib/i18n/locales/fa-IR/translation.json
@@ -72,6 +72,8 @@
 	"available!": "در دسترس!",
 	"Back": "بازگشت",
 	"Bad Response": "پاسخ خوب نیست",
+	"Bad words File": "",
+	"Bad words Template": "",
 	"Banners": "بنر",
 	"Base Model (From)": "مدل پایه (از)",
 	"Batch Size (num_batch)": "",
@@ -211,6 +213,8 @@
 	"Embedding model set to \"{{embedding_model}}\"": "مدل پیدائش را به \"{{embedding_model}}\" تنظیم کنید",
 	"Enable Chat History": "تاریخچه چت را فعال کنید",
 	"Enable Community Sharing": "فعالسازی اشتراک انجمن",
+	"Enable message bad Words replacement": "",
+	"Enable Message Filter": "",
 	"Enable New Sign Ups": "فعال کردن ثبت نام\u200cهای جدید",
 	"Enable Web Search": "فعالسازی جستجوی وب",
 	"Engine": "",
@@ -264,6 +268,7 @@
 	"File": "",
 	"File Mode": "حالت فایل",
 	"File not found.": "فایل یافت نشد.",
+	"Filter": "",
 	"Filter is now globally disabled": "",
 	"Filter is now globally enabled": "",
 	"Filters": "",
@@ -350,6 +355,7 @@
 	"Memory cleared successfully": "",
 	"Memory deleted successfully": "",
 	"Memory updated successfully": "",
+	"Message Filter Settings": "",
 	"Messages you send after creating your link won't be shared. Users with the URL will be able to view the shared chat.": "پیام های شما بعد از ایجاد لینک شما به اشتراک نمی گردد. کاربران با لینک URL می توانند چت اشتراک را مشاهده کنند.",
 	"Minimum Score": "نماد کمینه",
 	"Mirostat": "Mirostat",
