--- a/src/lib/i18n/locales/fr-CA/translation.json
+++ b/src/lib/i18n/locales/fr-CA/translation.json
@@ -72,6 +72,8 @@
 	"available!": "disponible !",
 	"Back": "Retour en arrière",
 	"Bad Response": "Mauvaise réponse",
+	"Bad words File": "",
+	"Bad words Template": "",
 	"Banners": "Banniers",
 	"Base Model (From)": "Modèle de base (à partir de)",
 	"Batch Size (num_batch)": "Taille du lot (num_batch)",
@@ -211,6 +213,8 @@
 	"Embedding model set to \"{{embedding_model}}\"": "Modèle d'encodage défini sur « {{embedding_model}} »",
 	"Enable Chat History": "Activer l'historique de conversation",
 	"Enable Community Sharing": "Activer le partage communautaire",
+	"Enable message bad Words replacement": "",
+	"Enable Message Filter": "",
 	"Enable New Sign Ups": "Activer les nouvelles inscriptions",
 	"Enable Web Search": "Activer la recherche sur le Web",
 	"Engine": "Moteur",
@@ -263,6 +267,7 @@
 	"File": "Fichier",
 	"File Mode": "Mode fichier",
 	"File not found.": "Fichier introuvable.",
+	"Filter": "",
 	"Filter is now globally disabled": "Le filtre est maintenant désactivé globalement",
 	"Filter is now globally enabled": "Le filtre est désormais activé globalement",
 	"Filters": "Filtres",
@@ -349,6 +354,7 @@
 	"Memory cleared successfully": "La mémoire a été effacée avec succès",
 	"Memory deleted successfully": "La mémoire a été supprimée avec succès",
 	"Memory updated successfully": "La mémoire a été mise à jour avec succès",
+	"Message Filter Settings": "",
 	"Messages you send after creating your link won't be shared. Users with the URL will be able to view the shared chat.": "Les messages que vous envoyez après avoir créé votre lien ne seront pas partagés. Les utilisateurs disposant de l'URL pourront voir le chat partagé.",
 	"Minimum Score": "Score minimal",
 	"Mirostat": "Mirostat",
