--- a/src/lib/i18n/locales/ko-KR/translation.json
+++ b/src/lib/i18n/locales/ko-KR/translation.json
@@ -72,6 +72,8 @@
 	"available!": "사용 가능!",
 	"Back": "뒤로가기",
 	"Bad Response": "잘못된 응답",
+	"Bad words File": "",
+	"Bad words Template": "",
 	"Banners": "배너",
 	"Base Model (From)": "기본 모델(시작)",
 	"Batch Size (num_batch)": "배치 크기 (num_batch)",
@@ -211,6 +213,8 @@
 	"Embedding model set to \"{{embedding_model}}\"": "임베딩 모델을 \"{{embedding_model}}\"로 설정함",
 	"Enable Chat History": "채팅 기록 활성화",
 	"Enable Community Sharing": "커뮤니티 공유 활성화",
+	"Enable message bad Words replacement": "",
+	"Enable Message Filter": "",
 	"Enable New Sign Ups": "새 회원가입 활성화",
 	"Enable Web Search": "웹 검색 활성화",
 	"Engine": "",
@@ -264,6 +268,7 @@
 	"File": "",
 	"File Mode": "파일 모드",
 	"File not found.": "파일을 찾을 수 없습니다.",
+	"Filter": "",
 	"Filter is now globally disabled": "",
 	"Filter is now globally enabled": "",
 	"Filters": "",
@@ -350,6 +355,7 @@
 	"Memory cleared successfully": "",
 	"Memory deleted successfully": "",
 	"Memory updated successfully": "",
+	"Message Filter Settings": "",
 	"Messages you send after creating your link won't be shared. Users with the URL will be able to view the shared chat.": "링크 생성 후에 보낸 메시지는 공유되지 않습니다. URL이 있는 사용자는 공유된 채팅을 볼 수 있습니다.",
 	"Minimum Score": "최소 점수",
 	"Mirostat": "Mirostat",
