--- a/src/lib/i18n/locales/nb-NO/translation.json
+++ b/src/lib/i18n/locales/nb-NO/translation.json
@@ -72,6 +72,8 @@
 	"available!": "tilgjengelig!",
 	"Back": "Tilbake",
 	"Bad Response": "Dårlig svar",
+	"Bad words File": "",
+	"Bad words Template": "",
 	"Banners": "Bannere",
 	"Base Model (From)": "Grunnmodell (Fra)",
 	"Batch Size (num_batch)": "",
@@ -211,6 +213,8 @@
 	"Embedding model set to \"{{embedding_model}}\"": "Embedding-modell satt til \"{{embedding_model}}\"",
 	"Enable Chat History": "Aktiver chat-historikk",
 	"Enable Community Sharing": "Aktiver deling i fellesskap",
+	"Enable message bad Words replacement": "",
+	"Enable Message Filter": "",
 	"Enable New Sign Ups": "Aktiver nye registreringer",
 	"Enable Web Search": "Aktiver websøk",
 	"Engine": "",
@@ -264,6 +268,7 @@
 	"File": "",
 	"File Mode": "Filmodus",
 	"File not found.": "Fil ikke funnet.",
+	"Filter": "",
 	"Filter is now globally disabled": "",
 	"Filter is now globally enabled": "",
 	"Filters": "",
@@ -350,6 +355,7 @@
 	"Memory cleared successfully": "",
 	"Memory deleted successfully": "",
 	"Memory updated successfully": "",
+	"Message Filter Settings": "",
 	"Messages you send after creating your link won't be shared. Users with the URL will be able to view the shared chat.": "Meldinger du sender etter at du har opprettet lenken din vil ikke bli delt. Brukere med URL-en vil kunne se den delte chatten.",
 	"Minimum Score": "Minimum poengsum",
 	"Mirostat": "Mirostat",
