--- a/src/lib/i18n/locales/nl-NL/translation.json
+++ b/src/lib/i18n/locales/nl-NL/translation.json
@@ -72,6 +72,8 @@
 	"available!": "beschikbaar!",
 	"Back": "Terug",
 	"Bad Response": "Ongeldig antwoord",
+	"Bad words File": "",
+	"Bad words Template": "",
 	"Banners": "Banners",
 	"Base Model (From)": "Basismodel (vanaf)",
 	"Batch Size (num_batch)": "",
@@ -211,6 +213,8 @@
 	"Embedding model set to \"{{embedding_model}}\"": "Embedding model ingesteld op \"{{embedding_model}}\"",
 	"Enable Chat History": "Schakel Chat Geschiedenis in",
 	"Enable Community Sharing": "Delen via de community inschakelen",
+	"Enable message bad Words replacement": "",
+	"Enable Message Filter": "",
 	"Enable New Sign Ups": "Schakel Nieuwe Registraties in",
 	"Enable Web Search": "Zoeken op het web inschakelen",
 	"Engine": "",
@@ -264,6 +268,7 @@
 	"File": "",
 	"File Mode": "Bestandsmodus",
 	"File not found.": "Bestand niet gevonden.",
+	"Filter": "",
 	"Filter is now globally disabled": "",
 	"Filter is now globally enabled": "",
 	"Filters": "",
@@ -350,6 +355,7 @@
 	"Memory cleared successfully": "",
 	"Memory deleted successfully": "",
 	"Memory updated successfully": "",
+	"Message Filter Settings": "",
 	"Messages you send after creating your link won't be shared. Users with the URL will be able to view the shared chat.": "Berichten die u verzendt nadat u uw link hebt gemaakt, worden niet gedeeld. Gebruikers met de URL kunnen de gedeelde chat bekijken.",
 	"Minimum Score": "Minimale Score",
 	"Mirostat": "Mirostat",
