--- a/src/lib/i18n/locales/tk-TM/transaltion.json
+++ b/src/lib/i18n/locales/tk-TM/transaltion.json
@@ -63,6 +63,8 @@
 	"available!": "elýeterli!",
 	"Back": "Yzyna",
 	"Bad Response": "Erbet Jogap",
+	"Bad words File": "",
+	"Bad words Template": "",
 	"Banners": "Bannerler",
 	"Base Model (From)": "Esasy Model (Kimden)",
 	"before": "öň",
