--- a/src/lib/i18n/locales/en-US/translation.json
+++ b/src/lib/i18n/locales/en-US/translation.json
@@ -72,6 +72,8 @@
 	"available!": "",
 	"Back": "",
 	"Bad Response": "",
+	"Bad words File": "",
+	"Bad words Template": "",
 	"Banners": "",
 	"Base Model (From)": "",
 	"Batch Size (num_batch)": "",
@@ -211,6 +213,8 @@
 	"Embedding model set to \"{{embedding_model}}\"": "",
 	"Enable Chat History": "",
 	"Enable Community Sharing": "",
+	"Enable message bad Words replacement": "",
+	"Enable Message Filter": "",
 	"Enable New Sign Ups": "",
 	"Enable Web Search": "",
 	"Engine": "",
@@ -264,6 +268,7 @@
 	"File": "",
 	"File Mode": "",
 	"File not found.": "",
+	"Filter": "",
 	"Filter is now globally disabled": "",
 	"Filter is now globally enabled": "",
 	"Filters": "",
@@ -350,6 +355,7 @@
 	"Memory cleared successfully": "",
 	"Memory deleted successfully": "",
 	"Memory updated successfully": "",
+	"Message Filter Settings": "",
 	"Messages you send after creating your link won't be shared. Users with the URL will be able to view the shared chat.": "",
 	"Minimum Score": "",
 	"Mirostat": "",
