--- a/src/lib/i18n/locales/he-IL/translation.json
+++ b/src/lib/i18n/locales/he-IL/translation.json
@@ -72,6 +72,8 @@
 	"available!": "זמין!",
 	"Back": "חזור",
 	"Bad Response": "תגובה שגויה",
+	"Bad words File": "",
+	"Bad words Template": "",
 	"Banners": "באנרים",
 	"Base Model (From)": "דגם בסיס (מ)",
 	"Batch Size (num_batch)": "",
@@ -211,6 +213,8 @@
 	"Embedding model set to \"{{embedding_model}}\"": "מודל ההטמעה הוגדר ל-\"{{embedding_model}}\"",
 	"Enable Chat History": "הפעל היסטוריית צ'אט",
 	"Enable Community Sharing": "הפיכת שיתוף קהילה לזמין",
+	"Enable message bad Words replacement": "",
+	"Enable Message Filter": "",
 	"Enable New Sign Ups": "אפשר הרשמות חדשות",
 	"Enable Web Search": "הפיכת חיפוש באינטרנט לזמין",
 	"Engine": "",
@@ -264,6 +268,7 @@
 	"File": "",
 	"File Mode": "מצב קובץ",
 	"File not found.": "הקובץ לא נמצא.",
+	"Filter": "",
 	"Filter is now globally disabled": "",
 	"Filter is now globally enabled": "",
 	"Filters": "",
@@ -350,6 +355,7 @@
 	"Memory cleared successfully": "",
 	"Memory deleted successfully": "",
 	"Memory updated successfully": "",
+	"Message Filter Settings": "",
 	"Messages you send after creating your link won't be shared. Users with the URL will be able to view the shared chat.": "הודעות שתשלח לאחר יצירת הקישור לא ישותפו. משתמשים עם כתובת האתר יוכלו לצפות בצ'אט המשותף.",
 	"Minimum Score": "ציון מינימלי",
 	"Mirostat": "Mirostat",
