--- a/src/lib/i18n/locales/hr-HR/translation.json
+++ b/src/lib/i18n/locales/hr-HR/translation.json
@@ -72,6 +72,8 @@
 	"available!": "dostupno!",
 	"Back": "Natrag",
 	"Bad Response": "Loš odgovor",
+	"Bad words File": "",
+	"Bad words Template": "",
 	"Banners": "Baneri",
 	"Base Model (From)": "Osnovni model (Od)",
 	"Batch Size (num_batch)": "",
@@ -211,6 +213,8 @@
 	"Embedding model set to \"{{embedding_model}}\"": "Embedding model postavljen na \"{{embedding_model}}\"",
 	"Enable Chat History": "Omogući povijest razgovora",
 	"Enable Community Sharing": "Omogući zajedničko korištenje zajednice",
+	"Enable message bad Words replacement": "",
+	"Enable Message Filter": "",
 	"Enable New Sign Ups": "Omogući nove prijave",
 	"Enable Web Search": "Omogući pretraživanje weba",
 	"Engine": "",
@@ -264,6 +268,7 @@
 	"File": "",
 	"File Mode": "Način datoteke",
 	"File not found.": "Datoteka nije pronađena.",
+	"Filter": "",
 	"Filter is now globally disabled": "",
 	"Filter is now globally enabled": "",
 	"Filters": "",
@@ -350,6 +355,7 @@
 	"Memory cleared successfully": "",
 	"Memory deleted successfully": "",
 	"Memory updated successfully": "",
+	"Message Filter Settings": "",
 	"Messages you send after creating your link won't be shared. Users with the URL will be able to view the shared chat.": "Poruke koje pošaljete nakon stvaranja veze neće se dijeliti. Korisnici s URL-om moći će vidjeti zajednički chat.",
 	"Minimum Score": "Minimalna ocjena",
 	"Mirostat": "Mirostat",
