--- a/src/lib/i18n/locales/id-ID/translation.json
+++ b/src/lib/i18n/locales/id-ID/translation.json
@@ -72,6 +72,8 @@
 	"available!": "tersedia!",
 	"Back": "Kembali",
 	"Bad Response": "Respons Buruk",
+	"Bad words File": "",
+	"Bad words Template": "",
 	"Banners": "Spanduk",
 	"Base Model (From)": "Model Dasar (Dari)",
 	"Batch Size (num_batch)": "Ukuran Batch (num_batch)",
@@ -211,6 +213,8 @@
 	"Embedding model set to \"{{embedding_model}}\"": "Model penyematan diatur ke \"{{embedding_model}}\"",
 	"Enable Chat History": "Aktifkan Riwayat Obrolan",
 	"Enable Community Sharing": "Aktifkan Berbagi Komunitas",
+	"Enable message bad Words replacement": "",
+	"Enable Message Filter": "",
 	"Enable New Sign Ups": "Aktifkan Pendaftaran Baru",
 	"Enable Web Search": "Aktifkan Pencarian Web",
 	"Engine": "",
@@ -264,6 +268,7 @@
 	"File": "Berkas",
 	"File Mode": "Mode File",
 	"File not found.": "File tidak ditemukan.",
+	"Filter": "",
 	"Filter is now globally disabled": "Filter sekarang dinonaktifkan secara global",
 	"Filter is now globally enabled": "Filter sekarang diaktifkan secara global",
 	"Filters": "Filter",
@@ -350,6 +355,7 @@
 	"Memory cleared successfully": "Memori berhasil dihapus",
 	"Memory deleted successfully": "Memori berhasil dihapus",
 	"Memory updated successfully": "Memori berhasil diperbarui",
+	"Message Filter Settings": "",
 	"Messages you send after creating your link won't be shared. Users with the URL will be able to view the shared chat.": "Pesan yang Anda kirim setelah membuat tautan tidak akan dibagikan. Pengguna yang memiliki URL tersebut akan dapat melihat obrolan yang dibagikan.",
 	"Minimum Score": "Skor Minimum",
 	"Mirostat": "Mirostat",
